<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:showDividers="middle"
              android:divider="@drawable/divider"
              android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/settings"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:textSize="9pt"
        android:paddingLeft="10dp"
        android:background="@color/blue"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="7pt"
                android:text="@string/one_touch_call"/>
            <TextView
                android:text="@string/one_touch_call_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <Switch
            android:id="@+id/one_click_call"
            android:layout_weight="1"
            android:layout_width="100dp"
            android:layout_height="fill_parent"/>
    </LinearLayout>

    <TextView
        android:id="@+id/finder_settings"
        android:padding="10dp"
        android:textSize="7pt"
        android:text="@string/finder_page_settings"
        android:textColor="#000000"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>

    <TextView
        android:id="@+id/recent_settings"
        android:padding="10dp"
        android:textSize="7pt"
        android:text="@string/recent_page_settings"
        android:textColor="#000000"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="7pt"
                android:text="@string/show_notification_icon"/>
        </LinearLayout>
        <Switch
            android:id="@+id/create_notification"
            android:layout_weight="1"
            android:layout_width="100dp"
            android:layout_height="fill_parent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/default_assist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:textSize="7pt"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/set_default_assist_app"
            android:textColor="#000000"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="5pt"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/set_default_1"
            android:textColor="@color/view_name_and_sub_text"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="5pt"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/set_default_2"
            android:textColor="@color/view_name_and_sub_text"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="5pt"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/set_default_3"
            android:textColor="@color/view_name_and_sub_text"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:id="@+id/start_tutorial"
        android:padding="10dp"
        android:textSize="7pt"
        android:text="@string/start_tutorial"
        android:textColor="#000000"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>

</LinearLayout>