<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/blue"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <ImageView
        android:src="@drawable/icon"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/imageView"/>


    <Button
        android:id="@+id/default_assist"
        android:layout_gravity="center"
        android:background="@drawable/cancel_button"
        android:text="@string/set_default_app"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/view_name_and_sub_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_default_1"
        android:gravity="center"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_default_2"
        android:gravity="center"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_default_3"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="7pt"
            android:text="@string/show_notification_icon"/>
        <Switch
            android:layout_marginLeft="20dp"
            android:id="@+id/create_notification"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"/>
    </LinearLayout>

    <Button
        android:id="@+id/start_tutorial"
        android:layout_gravity="center"
        android:background="@drawable/cancel_button"
        android:text="@string/start_tutorial"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/view_name_and_sub_text"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/start_app"
        android:layout_gravity="center"
        android:background="@drawable/cancel_button"
        android:text="@string/start_nfinder"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="@color/view_name_and_sub_text"
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>


</LinearLayout>