<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/recent_page_settings"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:textSize="8pt"
        android:paddingLeft="10dp"
        android:background="@color/blue"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_dark"
        android:text="@string/sort_categories"
        android:textColor="@color/view_name_and_sub_text"
        android:textSize="7pt"
        android:padding="10dp"/>

    <TableLayout
        android:id="@+id/view_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:orientation="horizontal"
        android:stretchColumns="*"
        android:visibility="visible">

        <TableRow>

            <CheckBox
                android:id="@+id/checkbox_music"
                android:layout_height="38dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="@string/music"
                android:textColor="@color/view_name_and_sub_text"/>

            <CheckBox
                android:id="@+id/checkbox_photo"
                android:layout_height="38dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="@string/photo"
                android:textColor="@color/view_name_and_sub_text"/>


            <CheckBox
                android:id="@+id/checkbox_video"
                android:layout_height="38dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="@string/video"
                android:textColor="@color/view_name_and_sub_text"/>
        </TableRow>

        <TableRow>


            <CheckBox
                android:id="@+id/checkbox_doc"
                android:layout_height="38dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="@string/doc"
                android:textColor="@color/view_name_and_sub_text"/>

            <CheckBox
                android:id="@+id/checkbox_file"
                android:layout_height="38dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:text="@string/files"
                android:textColor="@color/view_name_and_sub_text"/>
        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_dark"
        android:text="@string/sort_categories"
        android:textColor="@color/view_name_and_sub_text"
        android:textSize="7pt"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/parent">

    </LinearLayout>

</LinearLayout>